{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 20,
  "lineage": "21fba078-33dc-f066-0134-ffc29c77ad2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0be127df71dad5aa3",
            "id": "rtb-0be127df71dad5aa3",
            "owner_id": "565368885272",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-private-route-table-kannan"
            },
            "vpc_id": "vpc-05133b20d6ba5d1e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a3f2baaa08ff0d74",
            "owner_id": "565368885272",
            "tags": {
              "Name": "my-test-kannan-igw"
            },
            "vpc_id": "vpc-05133b20d6ba5d1e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04da1747cd6a743c3",
            "owner_id": "565368885272",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3f2baaa08ff0d74",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-test-public-route-kannan"
            },
            "vpc_id": "vpc-05133b20d6ba5d1e0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041925009308fc2d3",
            "route_table_id": "rtb-0be127df71dad5aa3",
            "subnet_id": "subnet-0e2d8c2caef3fbad4"
          },
          "dependencies": [
            "aws_default_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d499e91f0259c658",
            "route_table_id": "rtb-0be127df71dad5aa3",
            "subnet_id": "subnet-02d515345ebcfed2b"
          },
          "dependencies": [
            "aws_default_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1b0155b9ff3b103",
            "route_table_id": "rtb-04da1747cd6a743c3",
            "subnet_id": "subnet-06b65beaa731ae40b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0741184858aa419ea",
            "route_table_id": "rtb-04da1747cd6a743c3",
            "subnet_id": "subnet-075e448cd20f4ffb2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565368885272:security-group/sg-06208353dc197722a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06208353dc197722a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-test-sg-kannan",
            "name_prefix": null,
            "owner_id": "565368885272",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05133b20d6ba5d1e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-690120343",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06208353dc197722a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.test_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_inbound_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2958387524",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06208353dc197722a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.test_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-115291377",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06208353dc197722a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.test_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565368885272:subnet/subnet-0e2d8c2caef3fbad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e2d8c2caef3fbad4",
            "map_public_ip_on_launch": false,
            "owner_id": "565368885272",
            "tags": {
              "Name": "my-kannan-private-subnet.1"
            },
            "vpc_id": "vpc-05133b20d6ba5d1e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565368885272:subnet/subnet-02d515345ebcfed2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-02d515345ebcfed2b",
            "map_public_ip_on_launch": false,
            "owner_id": "565368885272",
            "tags": {
              "Name": "my-kannan-private-subnet.2"
            },
            "vpc_id": "vpc-05133b20d6ba5d1e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565368885272:subnet/subnet-06b65beaa731ae40b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06b65beaa731ae40b",
            "map_public_ip_on_launch": true,
            "owner_id": "565368885272",
            "tags": {
              "Name": "my-kannan-public-subnet.1"
            },
            "vpc_id": "vpc-05133b20d6ba5d1e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565368885272:subnet/subnet-075e448cd20f4ffb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-075e448cd20f4ffb2",
            "map_public_ip_on_launch": true,
            "owner_id": "565368885272",
            "tags": {
              "Name": "my-kannan-public-subnet.2"
            },
            "vpc_id": "vpc-05133b20d6ba5d1e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:565368885272:vpc/vpc-05133b20d6ba5d1e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ea05d6f386ab533",
            "default_route_table_id": "rtb-0be127df71dad5aa3",
            "default_security_group_id": "sg-0090557b16516f1d8",
            "dhcp_options_id": "dopt-6606f50d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05133b20d6ba5d1e0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be127df71dad5aa3",
            "owner_id": "565368885272",
            "tags": {
              "Name": "my-kannan-terraform-vpc-revised"
            }
          }
        }
      ]
    }
  ]
}